--- a/3sprint/chapter_doc.tex
+++ b/3sprint/chapter_doc.tex
@@ -1,5 +1,5 @@
 \chapter{Sprint 3}\label{cha:sprint3}
-This sprint aims to explore the possibilities of building our own tracking system as well as updating the RESTful intermediate service to finally fulfil the goals from \cref{cha:sprint2} and resolve issues. Furthermore, we will examine our system regarding basic methods to increase security.
+This sprint aims to explore the possibilities of building our own tracking system as well as updating the intermediate server to finally fulfil the goals from \cref{cha:sprint2} and resolve issues. Furthermore, we will examine our system regarding basic methods to increase security.
 
 \input{3sprint/update_rest}
 \input{3sprint/trackingsystem}
