--- a/3sprint/update_rest.tex
+++ b/3sprint/update_rest.tex
@@ -9,7 +9,7 @@ We plan on implementing an update to the intermediate server that is used to com
 \item Supports paging
 \end{itemize}
 
-\subsection{Loss of Data}
+\subsection*{Loss of Data}
 Geographical coordinates are now supported by MSE, thanks to the MSE administrator at AAU. To perform obfuscation of personal sensitive data, we can convert the returned string to classes containing all information in its member variables. With this method we can easily perform obfuscation of the data we are disallowed to keep by editing the fields corresponding to the personal sensitive data.
 
 This method utilizes a library developed by Google called gson \cite{gson}, which affords the ability to convert strings of the JSON format to a Java class and vice versa. We can acquire the classes by using an online tool called jsonschema2pojo \cite{jsonschematwopojo}, that analyses JSON strings and automatically generates classes with corresponding fields.
@@ -20,10 +20,10 @@ Performing several conversions results in a loss of data, as any information in 
 
 As a result of the update we now receive specific information that were previously unattainable through the MSE developer test system. This information includes personal sensitive data, which is now being obfuscated when necessary needed. 
 
-\subsection{Connectivity with MSE}
+\subsection*{Connectivity with MSE}
 After the initial deployment of the service we experienced downtime as a result of MSE being under maintenance. This was an unexpected event, and as such the program reacted in an unforeseen fashion. Part of the update integrates elements from the client, described in \ref{sec:fetch_data}, in an effort to increase robustness and as such uptime of the service. As a result, the service now sends an initial request to MSE, to confirm the MSE IP address and account info. Furthermore, the service is able to handle MSE being unresponsive.
 
-\subsection{Paging}
+\subsection*{Paging}
 When requesting all clients from MSE the response is partitioned into pages. Each page contains a certain amount of entries, as defined in the request. If this is not defined in the request, a default of 5000 entries per page is used. 
 
 Initially we were not aware of this feature, as the MSE test service never made use of paging. As a result, we would only receive the first page of information, missing out on thousands of entries. This update aims to implement a correction, which will enable the use of paging in a request. After this update it is possible to explicitly state which page is requested, whenever a request is sent.
