--- a/4sprint/catch_up.tex
+++ b/4sprint/catch_up.tex
@@ -25,10 +25,10 @@ Sending the Java program to the virtual intermediate server:
 \item Detach from the screen by holding down CTRL+a+d.
 \end{enumerate}
 
-\subsection{IntelliJ Debug Configurations}
+\subsection*{IntelliJ Debug Configurations}
 When further developing the project it is useful to share the debug configurations, such that the project setup only has to be done on one computer. In IntelliJ, open the Edit Configurations screen and tick the shared box. This creates a folder in the .idea project folder called runConfigurations, which can be shared. When opening the project, IntelliJ will automatically detect existing debug configurations in this folder.
 
-\subsection{Projects under Indoor Repository}
+\subsection*{Projects under Indoor Repository}
 The Indoor (ID) Gitlab repository contains several IntelliJ projects. The projects are called: testingPrograms, RestfulMSE, indoorLibrary, indoorCore. Additionally you will be able to find a JavaDocs folder containing code documentation.
 
 \begin{itemize}
@@ -38,7 +38,7 @@ The Indoor (ID) Gitlab repository contains several IntelliJ projects. The projec
 \item IndoorCore contains the code for the client service. 
 \end{itemize} 
 
-\subsection{First Time Opening the Program}
+\subsection*{First Time Opening the Program}
 This is a step guide to setup the IntelliJ IDE with the project.
 \begin{itemize}
 \item Files -> Open, and select one of the projects in the indoor repository.
