--- a/experience/multi_project.tex
+++ b/experience/multi_project.tex
@@ -1,7 +1,7 @@
 \section{Working in a Multi-Project}
 we are encountered with a set of different challenges compared to working in the traditional format, which we are used to. In order to cope with the new setting our, and other, groups had to change behaviour in regards to other groups and the use of group-rooms. Amongst others.
 
-\subsection{Organisation}
+\subsection*{Organisation}
 It is necessary to enforce an organisational structure to efficiently establish an overview of the project when collaborating with a large group of people. As described in \cref{subsec:supergroup_meetings}, we needed to know how far the different groups were with their separate parts of the project and what kind of problems they were facing. If one group could not make any serious progress because of some hindrance, it was important that the other groups were notified, in case they were depending on their work. We uncovered the vast majority of these problems by organising what resembles a Scrum stand up meeting, at the super-group meetings where every representative reported their individual project status. If a group had a problem they were unable to solve themselves, they could draw help from the other groups, or move some of their tasks to them. It should be noted that it was only project wide tasks that could be transferred, such as updating the GitLab server or implementing a logging system.
 
 The super-group meetings were accompanied by smaller project wide meetings where a single specific topic would be discussed. For instance, a topic we discussed was regarding the type of license that would be applied to the project.
@@ -17,7 +17,7 @@ We faced a problem internally in the group which sprung out from how we handled 
 A weekly topic that recurred on super-group meetings was the status update from each group. It was problematic that some groups did not take this presentation seriously and would not mention the problems they were facing our leave out details that might could have been useful for the other groups. It also meant that other groups perceived them as being slow and unresponsive to the requests that were presented with, even if it was them unfit and they actually did what they could in order to keep up. Groups would delay some of their tasks because they thought that the other group would \textit{soon} finish the part that they were depending on, even though that it might could take entire weeks before the part were complete. This was frustrating for those whom depended on the completion of the tasks it meant that they sometimes would need to redesign parts of their solution, or worse, cancel further work as they would not have time to finish. \\
 It would be better if all the groups took the status presentation seriously such that issues could be resolved earlier or entirely avoided. % Skal vi komme ind på hvorfor vi tror at de ikke sagde noget? Skal vi komme ind på hvordan man kan løse det i mere detalje? Jeg har nogle ideer til begge dele. \Anders
 
-\subsection{Working Environment}
+\subsection*{Working Environment}
 % Hvordan sørger man for at holde et godt arbejdsmijø? Konflikthåndtering, møder(brydder ind), ansvar
 When working with multiple teams, it becomes apparent that mutual respect between the groups are important to uphold a healthy working environment.
 
@@ -30,7 +30,7 @@ In order to keep the group-rooms quiet, it was discouraged to arrange supervisor
 Experience from the last semester, the fifth, encouraged us to make rules for how to access and use the shared refrigerator. We had a problem with spoiled food as people would leave their lunch and forget about it. Another issue lied in people walking in and out of the group room that hosted %Havde? \Anders
 the fridge, which was disturbing. Because of these reasons, an agreement on visiting hours and when it was allowed to throw away leftover food was established. This meant that groups who resides in the same room where the fridge was located, should have a better experience than those from the last semester.
 
-\subsection{Overall Opinion}
+\subsection*{Overall Opinion}
 % Konklussion? 
 A set of solutions was taken in use to combat the new challenges that we were faced with this semester in order to uphold a healthy working environment and to ensure that a large group could work together in togetherness. % #Simon
 
