changes til resumeet

--- a/formalia/resume.tex
+++ b/formalia/resume.tex
@@ -1,16 +1,17 @@
 \chapter*{Summary}
-In this multi-project our group have been concerned with indoor positioning. Our main goal have been to provide the applications utilizing indoor positions with information about peoples location in indoor spaces. We chose to utilize Cisco, which is available at Aalborg University (AAU). Cisco is an implemented system at AAU capable of locating Wi-Fi devices via certain calculations on the Received Signal Strength Indication (RSSI).
+In this multi-project our group have been concerned with indoor positioning. Our main goal have been to provide the applications utilising indoor positions with information about people's location in indoor spaces. We chose to utilise Cisco MSE, which is available at Aalborg University (AAU). MSE is capable of locating Wi-Fi devices via certain calculations on the Received Signal Strength Indication (RSSI).
 
-With Cisco we are able to extract the geographical location of all devices within the boundaries of the system, even if the device is not connected to the network. However since Cisco grants us access to personal information of all the devices such as the MAC address and if people are logged on to the network their mail. The Cisco administrator asked of us to make this non accessible to anyone, and since it is only accessible through his closed network we put up an intermediate server form which we could obfuscate personal information and had access to retrieve the data from. By doing so not even we are able to access the sensitive information. 
+With MSE we are able to extract the geographical location of all devices within the boundaries of the system, even if the device is not connected to the network. However, since MSE grants us access to personal informations of all the devices such as the MAC address' and if people are logged on to the network their mail. The Cisco administrator asked of us to make this non accessible to anyone, and since it is only accessible through his closed network we made an intermediate server from which we could obfuscate personal information and retrieve the data from. By doing so not even we are able to access the sensitive information. 
 
-As we handle sensitive information a large effort have been put into security. We handle concerns in regard to obfuscating sensitive information however further insurances could have been taken as it will be explained in the rapport.
+As we handle sensitive information a great deal of effort have been put into security. We handle concerns in regard to obfuscating sensitive information, however further insurances could have been taken% as it will be explained in the rapport
+.
 
-The data converted into Java classes on the intermediate server and sent to a client on the aSTEP server upon request. As the data is received by the client it is processed and send to the database, in the same format as that supplied by the outdoor positioning groups, form where it is available to all projects in the multi-project.
+The data received on the client is processed such that it can be converted to a common aSTEP Java class which was created by multiple groups. This collaboration ensured that the different positioning data would be uniform across all groups in order to ease the process of saving and retrieving them to and from the database.
 
-In the rapport we document information gained during each sprint and updates made to our system, this means that code snippets described in the first sprint may not be consistent with the code in the final version.
+In the report we document the information that was gained during each sprint and updates made to our systems, this means that code snippets described in the first sprint may not be consistent with the code in the final version.
 
-In addition we have been working on building our own Indoor Positioning System (IPS) using access points. We ordered different routers and access points to work with. The reason for ordering different hardware was to se if one type would be able to provide a more precise location than the other. We did however run into difficulties in regard to getting the RSSI and were therefore not able to finish this.
+In addition we have been working on building our own Indoor Positioning System (IPS) using access points. We ordered different routers and access points to work with. The reason for ordering different hardware was to compare them in regards to which would provide the most precise location data. We ran into difficulties in regard to getting the RSSI and were therefore not able to finish it.
 
-As other groups are dependent on our system there have put a greater effort into testing the code in order to make sure it is always running and thereby capable of supplying the applications with fresh data.
-Also since the project is to be continued by future students, there have been put a greater than normal effort into documenting the code and explaining how it works. In addition we have gone into more detail about what we believe should be the next steps for our system.
-To help future students getting started and prepare them for working in a multi-project, we have dedicated a chapter to explain how they should handle the excising system and our experience with working alongside multiple other groups. 
+As other groups are dependent on our system we have put a greater effort into testing the code in order to make sure it is always running and thereby capable of supplying the application groups with real-time data.
+Also since the project is to be continued by future students, we have put a greater than normal effort into documenting the code and explaining how it works. In addition, we have gone into more detail about what we believe should be the next steps for the continuation of our system.
+To help future students getting started and prepare them for working in a multi-project, we have dedicated a chapter to explaining how they should handle the excising system and our experience with working together with multiple other groups. 
