read future of our IPS

--- a/preamble_ida13.tex
+++ b/preamble_ida13.tex
@@ -59,7 +59,7 @@
 %%%% CUSTOM SETTINGS %%%%
 
 %%%% New Commands %%%%
-\newcommand{\name}{The Foundation of the aSTEP Indoor Core}
+\newcommand{\name}{Geographical Positioning in Indoor Spaces for aSTEP}
 
 % ¤¤ Marginer ¤¤ %
 \setlrmarginsandblock{3.5cm}{2.5cm}{*}		% \setlrmarginsandblock{Indbinding}{Kant}{Ratio}
