fixed those zees

--- a/1sprint/cisco.tex
+++ b/1sprint/cisco.tex
@@ -1,5 +1,5 @@
 \section{Monitoring Wireless Devices}\label{sec:monitoring} 
-When monitoring wireless devices in indoor spaces, a set of obstacles are presented. Some of the popular techniques used in outdoor environments prove themselves obsolete or severely hindered when applied in an indoor environment. This can be seen when working with the Global Positioning System(GPS) technology, as obstacles such as walls, roofs and floors will disrupt the signals received from satellites, leading to large imprecisions in the position measurement \cite{gps_indoor}. As a consequence we need to explore specialized methods for determining positions in indoor spaces.
+When monitoring wireless devices in indoor spaces, a set of obstacles are presented. Some of the popular techniques used in outdoor environments prove themselves obsolete or severely hindered when applied in an indoor environment. This can be seen when working with the Global Positioning System(GPS) technology, as obstacles such as walls, roofs and floors will disrupt the signals received from satellites, leading to large imprecisions in the position measurement \cite{gps_indoor}. As a consequence we need to explore specialised methods for determining positions in indoor spaces.
 
 In this section we will explore different approaches for indoor positioning and monitoring mobile devices, and examine systems using these.
 
@@ -16,7 +16,7 @@ Tracking approaches are typically mapped into four categories \cite{tracking_app
 Despite the partitioning, many advanced approaches combine categories to increase the location accuracy. We will take a look at an approach from each category.
 
 \subsubsection*{Cell of Origin}
-Approaches categorized under cell of origin are among the simplest techniques for positioning. These approaches aim to position mobile devices in cells, either defined by the reach of access points, or defined by rooms in a building.
+Approaches categorised under cell of origin are among the simplest techniques for positioning. These approaches aim to position mobile devices in cells, either defined by the reach of access points, or defined by rooms in a building.
 The latter approach can utilise RFID to create checkpoints throughout a building. These checkpoint are placed in room entrances and consist of a RFID scanner, such that devices with a RFID tag are registered as they pass by the scanner \cite{indoor_bin}. 
 This approach can be used to track the RFID tags, as each tag contains a unique ID, which is combined with the RFID scanners ID and a time-stamp. By analysing the most recent entry, the system will know which room the tag is located in \cite{RFIDjournal}.
 
@@ -41,7 +41,7 @@ This category consists of approaches where the angle of the received signal is m
 The location patterning category sets out to measure the connectivity patterns for a set of locations. The most common approach for this category is called WI-FI Fingerprinting. This method has an intial calibration phase, where the RSSI pattern for each point of interest is measured and stored in the system. When the signal strength from a device is received, it is then compared to the previously measured RSSI patterns. The point of interest with the most similar pattern is determined to be the position of the device. This means that a system using fingerprinting can not determine the exact position of a device, but rather calculates a probability that the device is located at a given point of interest \cite{fingerprint1}.
 
 \subsection{Evaluation Dimensions}
-When evaluating indoor location services there are three dimensions that we can evaluate quality on: location precision, refresh rate and system latency. Location precision tells us about the location precision that the system affords. Refresh rate is the rate at which the location is updated, and as such how closely the most recent data is related to real-time data. System latency is a dimension describing the time it takes to perform the positioning calculations \cite{dimensions}. These dimensions are not standardized, but we view them as reasonable initial parameters for comparing the systems.
+When evaluating indoor location services there are three dimensions that we can evaluate quality on: location precision, refresh rate and system latency. Location precision tells us about the location precision that the system affords. Refresh rate is the rate at which the location is updated, and as such how closely the most recent data is related to real-time data. System latency is a dimension describing the time it takes to perform the positioning calculations \cite{dimensions}. These dimensions are not standardised, but we view them as reasonable initial parameters for comparing the systems.
 
 The three dimensions are in no way constant for a system. For most systems, the hardware has a large influence on the dimensions. For instance, location precision for Triangulation is severely diminished if the environment lacks access points. Refresh rate depends on how often mobile devices communicate with the network and system latency can be impacted by a large amount of noise on the WI-FI channels. \Cref{tab:evaluating_approaches} shows the influences for the four tracking approach categories for each evaluation dimension. As the table shows, it is primarily the location precision that has various dependencies across the approaches. The refresh rate will in most cases depend on the interval at which the device communicates, while the system latency entirely depends on the software, hardware and communication protocols used.
 
