--- a/4sprint/intermediate_server_update.tex
+++ b/4sprint/intermediate_server_update.tex
@@ -9,7 +9,7 @@ An update has been implemented for the intermediate server to expedite debugging
 
 \subsection*{Logging}
 During the course of the third and fourth sprint we encountered sporadic downtime on our intermediate server in the form of erroneous response of complete lack thereof. Upon further investigation, we have found that this is a consequence of MSE being down for maintenance. We have implemented two tools that will assist developers in debugging in these situations.
-First, the intermediate server now utilizes Log4j \cite{log4j} to log error messages during execution. These error logs are stored in log files saved locally, which can be accessed and read as cleartext. The log only concerns errors and alike, and each log entry contains a timestamp, error message, error level and exception type. We believe it would be beneficial for future development to have an additional log that records other messages as well. That information can be used to debug potential errors and to analyse the connectivity history.
+First, the intermediate server now utilises Log4j \cite{log4j} to log error messages during execution. These error logs are stored in log files saved locally, which can be accessed and read as cleartext. The log only concerns errors and alike, and each log entry contains a timestamp, error message, error level and exception type. We believe it would be beneficial for future development to have an additional log that records other messages as well. That information can be used to debug potential errors and to analyse the connectivity history.
 
 Secondly, we have implemented an additional context to specifically query if the MSE is online. When requesting this URI, the system will attempt to connect to MSE and the response will depend on whether it retrieves a HTTP response code from MSE. Using this URI, it is very easy to learn that a problem stems from MSE being unresponsive, and is not a consequence of an error internally in our system.
 
