--- a/2sprint/client.tex
+++ b/2sprint/client.tex
@@ -59,4 +59,4 @@ server.createContext("/api/add/server", httpExchange -> {
 
 In order to store program configuration, we save the IP addresses and user information in a file. This is particularly helpful for debugging purposes, as we do not need to reinsert information into the program on each start up. Naturally, storing sensitive information such as passwords in a file is a bad idea. However, the client is intended to have an uptime of close to 100\%, and it is as such not a necessity to store sensitive information in secondary memory in a final release. Furthermore, as the focus shifts towards security we will have to find a way to encode and store sensitive data to ensure that intruders cannot retrieve nor use any information they may find.
 
-The fetch list is handled by creating a fetch thread for each element. This thread is tasked with the retrieval of information, obfuscation and dispatching the information to the database. In between this sequence of operations the thread will suspend its operations by sleeping, thus making processor time available for other threads. If a connection fails repeatedly for 12 hours, the responsible thread will simply die. Using threads allow for concurrent connections with MSE services and allows the underlying operating system and compiler to optimise the program to utilize several processor cores.
+The fetch list is handled by creating a fetch thread for each element. This thread is tasked with the retrieval of information, obfuscation and dispatching the information to the database. In between this sequence of operations the thread will suspend its operations by sleeping, thus making processor time available for other threads. If a connection fails repeatedly for 12 hours, the responsible thread will simply die. Using threads allow for concurrent connections with MSE services and allows the underlying operating system and compiler to optimise the program to utilise several processor cores.
