--- a/3sprint/update_rest.tex
+++ b/3sprint/update_rest.tex
@@ -12,7 +12,7 @@ We plan on implementing an update to the intermediate server that is used to com
 \subsection*{Loss of Data}
 Geographical coordinates are now supported by MSE, thanks to the MSE administrator at AAU. To perform obfuscation of personal sensitive data, we can convert the returned string to classes containing all information in its member variables. With this method we can easily perform obfuscation of the data we are disallowed to keep by editing the fields corresponding to the personal sensitive data.
 
-This method utilizes a library developed by Google called gson \cite{gson}, which affords the ability to convert strings of the JSON format to a Java class and vice versa. We can acquire the classes by using an online tool called jsonschema2pojo \cite{jsonschematwopojo}, that analyses JSON strings and automatically generates classes with corresponding fields.
+This method utilises a library developed by Google called gson \cite{gson}, which affords the ability to convert strings of the JSON format to a Java class and vice versa. We can acquire the classes by using an online tool called jsonschema2pojo \cite{jsonschematwopojo}, that analyses JSON strings and automatically generates classes with corresponding fields.
 
 Initially, the generated classes did not contain fields for the global coordinates, as they were based on the response string from a version of MSE where this feature was disabled. This would not be a problem for a single conversion, as the generated classes have a field called \textit{additionalProperties}, which contains additional information that could store the coordinates. However, in order to preserve the transparency of the intermediate server, we wish to perform a conversion back to JSON in order to maintain the external illusion of this intermediate server being an MSE service.
 
