--- a/collaboration/aSTEP_meetings.tex
+++ b/collaboration/aSTEP_meetings.tex
@@ -9,7 +9,7 @@ At the super-group meetings our representative has been responsible for taking n
 \subsection*{Small Meetings}\label{subsec:small_meetings}
 In addition to the super-group meetings there are being held smaller meetings, where only a few groups participate, in order to specify needs, present ideas and possible solutions.
 
-We have had multiple of these meetings with respectively the groups responsible for the database, the application group utilizing indoor positioning, the user management group and the other group working with indoor positioning.
+We have had multiple of these meetings with respectively the groups responsible for the database, the application group utilising indoor positioning, the user management group and the other group working with indoor positioning.
  
 \subsubsection*{Application Meetings}
 At meetings with the application group they specified what data they need and we explained how we can provide it. The application group we have had meetings with are making a heat map, and they require geographical coordinates and confidence factor for each device.
@@ -21,4 +21,4 @@ During meetings with the database groups, we talked about what data has to be st
 We have had several meetings with the other indoor positioning group over the semester. During these meetings we have discussed the possibilities for indoor positioning systems and how we could distribute tasks between the groups. It was during these meetings that we decided to have one group focus on retrieving indoor positioning data, and one group focus on delivering the data to applications. We have had continuous communication between our two groups to keep track of progression and difficulties.
 
 \subsubsection*{UM meetings}
-Several meetings were held with the UM group concerning HTTPS and how to incorporate it with our RESTful service. Initially we were not able to set up the HTTPS correctly in the estimated time. When the problems were raised on slack aSTEP, a member from the Hotmap application group said he had experience with this and knew how to do it. We were then tasked to work on changing the previous code to allow aSTEP to communicate using HTTPS. Next, we had to create a certificate for aSTEP, to do this we need a third party to ensure that when client connect to our RESTful services it is not a scam or being emulated by a a third party. We initially took on the task of doing this, but realized that we do not have access to the aSTEP server, so the task was forwarded to the group in charge of the aSTEP service server. 
+Several meetings were held with the UM group concerning HTTPS and how to incorporate it with our RESTful service. Initially we were not able to set up the HTTPS correctly in the estimated time. When the problems were raised on slack aSTEP, a member from the Hotmap application group said he had experience with this and knew how to do it. We were then tasked to work on changing the previous code to allow aSTEP to communicate using HTTPS. Next, we had to create a certificate for aSTEP, to do this we need a third party to ensure that when client connect to our RESTful services it is not a scam or being emulated by a a third party. We initially took on the task of doing this, but realised that we do not have access to the aSTEP server, so the task was forwarded to the group in charge of the aSTEP service server. 
