changes in experience

--- a/experience/experience.tex
+++ b/experience/experience.tex
@@ -1,5 +1,5 @@
 \chapter{Experience}
-We will present our experience with working in a multi-project and what we have learned from it. We will do so by documenting our thought and giving advice trough a catch up section to the future student who are to furtherer develop the project.
+We will present our experience with working in a multi-project and what we have learned from it. We do so by documenting our thoughts and giving advice trough a catch up section to the future student who are to further develop the project.
 
 \input{experience/multi_project}
 \input{experience/our_system}
