små/store bogstaver i titler

--- a/3sprint/security.tex
+++ b/3sprint/security.tex
@@ -39,7 +39,7 @@ It has been requested by the Heatmap application group to have a unique identifi
 
 Java has a hash-method implemented in the object class called \textit{hashCode()}, this may be used for hashing information. When using a hash function, you add a randomly generated string that extends the original message. The generated string is called a salt and makes the hash function more secure.
 
-\subsection*{Hard-coded Passwords}
+\subsection*{Hard-Coded Passwords}
 When communicating with MSE from the intermediate server as well as when communicating with the intermediate server, we are currently using hard-coded passwords. This means that everyone with access to the code can find the log-in information. The information should be given as arguments to the program and hashed such that the log-in can not be seen in the code and cannot be read as plain text in memory. 
 
 %\subsection*{Visibility}
