--- a/future_work/future_work.tex
+++ b/future_work/future_work.tex
@@ -21,7 +21,7 @@ In this chapter we describe what we believe will be advantageously for future st
 
 The optimal solution to this issue is to create a hierarchy of servers, such that the database server only receives data from a limited amount of intermediate servers, each of which also receive information from an amount of sources. During the start up of the aSTEP multi-project we have access to a single Cisco MSE system, and as such we will not focus on building this hierarchy. However, as the project grows and additional Cisco systems are integrated, it will eventually become a necessity.
 
-\section{Further Development on Intermediate Server}\label{sec:future_intermediate}
+\section{The Intermediate Server}\label{sec:future_intermediate}
 As we are working on developing these tools to gather data, Cisco are further developing MSE. It is likely that new functionality has been added once development continues on this project, and it is therefore suggested that MSE is updated. The documentation for the newest version can always be found online, including the RESTful api documentation. From what we experienced, the documentation for the RESTful api is very poor, and requires additional effort to test functionality and acquire a good understanding of the api. Newer versions of MSE have some features that initially appear useful, but require a closer look to determine whether the project can make use it. We have chosen not to put effort into examining these features, as the documentation is very poor and easily misunderstood, and we have had very limited access to a system where we could test functionality.
 
 One slightly obscure feature that MSE offers is to obfuscate MAC addresses. We do not know whether this is a binary setting, or if it is possible to configure this in more advanced ways. Similarly, MSE also offer the ability to subscribe to movement, such that subscribers are notified when movement occurs. However, this requires additional configuration on the MSE side, as well as a server that MSE can notify. Lastly, we suspect it might be possible to simply request positioning for the devices that have changed positions recently. We suggest these features are further explored.
