--- a/3sprint/trackingsystem.tex
+++ b/3sprint/trackingsystem.tex
@@ -1,4 +1,4 @@
-\section{Building our own tracking system using routers and hotspots} \label{sec:ourSys}
+\section{Building our Own Tracking System Using Routers and Hotspots} \label{sec:ourSys}
 This section will cover the progress made in building and researching routers and hotspots to make our own Indoor Positioning System (IPS). A list of objectives can be seen below. The primary goal is enabling us to calculate our position in geographical coordinates, in order to compare it with the coordinates provided by MSE.
 
 \begin{itemize}
