--- a/collaboration/aSTEP_meetings.tex
+++ b/collaboration/aSTEP_meetings.tex
@@ -1,7 +1,7 @@
 \section{aSTEP Meetings}
 In this section we describe some of the meeting held with other groups in the aSTEP multi-project. The focus will be on the weekly super-group meetings and the smaller meetings held with only a few groups.
 
-\subsection*{Super-group Meetings}\label{subsec:supergroup_meetings}
+\subsection*{Super-Group Meetings}\label{subsec:supergroup_meetings}
 In the aSTEP multi-project, ten groups are working together to make one large system with multiple applications. To keep track of progress and requirements in regards to individual parts of the system, weekly meetings are held with one representative from each group.
 
 At the super-group meetings our representative has been responsible for taking notes and prepare a summary for everyone to see. During these meetings there is a live chat on Slack \cite{slack}, such that everyone participating in the multi-project can see what is being discussed and add their input if necessary. In March it was decided at a super-group meeting that there should be a mid-sprint meeting, where the goals for the sprint was presented and the progress thereof evaluated.
